[package]
name = "encrypted-cloud-storage"
version = "0.1.0"
edition = "2021"
authors = ["Cryptography Engineering Project"]
description = "Encrypted cloud storage with AES-256-GCM, Argon2id, and HKDF"

[[bin]]
name = "ecs"
path = "src/main.rs"

[dependencies]
aes-gcm    = "0.10"
argon2     = "0.5"
hkdf       = "0.12"
sha2       = "0.10"
rand       = { version = "0.8", features = ["getrandom"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
hex        = "0.4"
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
uuid       = { version = "1", features = ["v4"] }
zeroize    = "1"

[dev-dependencies]
tempfile = "3"